testing/macro-tests/tests/ui/store_flat_memory_ids.stderr
error: store memory ids must be declared inside storage(journaled(...))
  --> tests/ui/store_flat_memory_ids.rs:10:5
   |
10 |     data_memory_id = 100,
   |     ^^^^^^^^^^^^^^
